added name and title to atRisk
